everything done the last day

--- a/EDA-FE_v02-kovalev.ipynb
+++ b/EDA-FE_v02-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a298d5d5",
+   "id": "3723b173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8df85eb4",
+   "id": "6e6f729a",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0cecea4",
+   "id": "d258186b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "33fd8a07",
+   "id": "7d62179a",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4967e61",
+   "id": "a077967a",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "58a962c1",
+   "id": "4efb04e0",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "15818c62",
+   "id": "583ddf6d",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5ee0aa90",
+   "id": "3f30f89e",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "59f05b65",
+   "id": "031da180",
    "metadata": {},
    "outputs": [
     {
@@ -276,8 +276,211 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "f16860ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>region</th>\n",
+       "      <th>city</th>\n",
+       "      <th>citizenship</th>\n",
+       "      <th>education</th>\n",
+       "      <th>job_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>F</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>115</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9157009756404187626</td>\n",
+       "      <td>F</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>668</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1893104556496814867</td>\n",
+       "      <td>M</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>65</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6886062013213911831</td>\n",
+       "      <td>F</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-8156468515495593794</td>\n",
+       "      <td>F</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>HIGHER_PROFESSIONAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21493</th>\n",
+       "      <td>4662551505651924284</td>\n",
+       "      <td>M</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21494</th>\n",
+       "      <td>-8968737688687691353</td>\n",
+       "      <td>M</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>33</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21495</th>\n",
+       "      <td>-5799097497074119478</td>\n",
+       "      <td>F</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>225</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21496</th>\n",
+       "      <td>-2264802671063321355</td>\n",
+       "      <td>M</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>368</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>MIDDLE_PROFESSIONAL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21497</th>\n",
+       "      <td>-174115151336149439</td>\n",
+       "      <td>M</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
+       "      <td>RUSSIA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21498 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 client_id gender  age  region  city citizenship  \\\n",
+       "0      7513301859607023584      F 33.0       0   115      RUSSIA   \n",
+       "1      9157009756404187626      F 59.0      17   668      RUSSIA   \n",
+       "2     -1893104556496814867      M 51.0      28    65      RUSSIA   \n",
+       "3      6886062013213911831      F 56.0       0    40      RUSSIA   \n",
+       "4     -8156468515495593794      F 34.0      -1    -1      RUSSIA   \n",
+       "...                    ...    ...  ...     ...   ...         ...   \n",
+       "21493  4662551505651924284      M 31.0       0    14      RUSSIA   \n",
+       "21494 -8968737688687691353      M 53.0      25    33      RUSSIA   \n",
+       "21495 -5799097497074119478      F 57.0      12   225      RUSSIA   \n",
+       "21496 -2264802671063321355      M 37.0      37   368      RUSSIA   \n",
+       "21497  -174115151336149439      M 33.0       7    13      RUSSIA   \n",
+       "\n",
+       "                 education job_type  \n",
+       "0                      NaN      NaN  \n",
+       "1                      NaN      NaN  \n",
+       "2                      NaN      NaN  \n",
+       "3                      NaN      NaN  \n",
+       "4      HIGHER_PROFESSIONAL      NaN  \n",
+       "...                    ...      ...  \n",
+       "21493                  NaN      NaN  \n",
+       "21494                  NaN      NaN  \n",
+       "21495                  NaN      NaN  \n",
+       "21496  MIDDLE_PROFESSIONAL      NaN  \n",
+       "21497                  NaN      NaN  \n",
+       "\n",
+       "[21498 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dddb8169",
+   "id": "f005ab1f",
    "metadata": {},
    "outputs": [],
    "source": []
