--- a/Unused/GenerateFeatures.ipynb
+++ b/Unused/GenerateFeatures.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dd2114cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9ddfb77b",
    "metadata": {},
    "outputs": [
     {
@@ -99,37 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e31079a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['N. NOVGOROD', 'RADUZHNYI', 'RADUZHNYJ', ..., 'MOELNDAL',\n",
-       "       'BEZSDACHI.RU', 'WWW.KVIKU.RU'], dtype=object)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transactions['txn_city'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 65,
-   "id": "570cb6a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import googlemaps\n",
     "from datetime import datetime\n",
     "\n",
-    "gmaps = googlemaps.Client(key='AIzaSyBqlqt9fm7iNwFH_QFTE3-yRa1M40HnzeE')\n",
+    "gmaps = googlemaps.Client(key='<YOUR-API-KEY-HERE>')\n",
     "\n",
     "# Geocoding an address\n",
     "geocode_result = gmaps.geocode('PENZA G Russia')"
@@ -138,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "8ff7c79f",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ab95ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "df962517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b277d5c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2830b5f6",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +223,6 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "084f10e2",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "30daa160",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "8d1366f0",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +316,6 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "a4ebb879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +325,6 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "11b23963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +334,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "908c85ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -377,7 +341,6 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "354163c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +352,6 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "954130eb",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +439,6 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "9d51beee",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +459,6 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "34929f7c",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +479,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abae2a8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -546,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
